--- a/resources/css/_typography.scss
+++ b/resources/css/_typography.scss
@@ -41,13 +41,27 @@ h1 {
 }
 
 h2 {
-    font-size: 3.2rem;
-    color: $main-color;   
+    color: $main-color;
 }
+
+@media screen and (max-width: 768px) {
+    h2 {
+        font-size: 2.6rem;
+    }
+}
+
+@media screen and (min-width: 768px) {
+        
+    h2 {
+        font-size: 3.2rem;
+        
+    }
+}
+
 
 .h2-thin {
     color: $grey-medium;
-    font-size: 2.6rem;
+    font-size: 2.2rem;
     font-weight: 300;
 
     &:before {
