--- a/resources/css/_typography.scss
+++ b/resources/css/_typography.scss
@@ -81,10 +81,12 @@ h3 {
 
 p, li {
     color: $grey-dark;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 300;
-    line-height: 150%;
+    line-height: 1.5;
 }
+
+
 
 
 
