--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -5,6 +5,7 @@ $grey-light: #f4f4f4;
 $white: #ffffff;
 $bg-grey-opaque: rgb(236,237,245);
 $bg-grey: rgba($bg-grey-opaque,0.94);
+$contrast-color: #FF4B2B;
 
 
 $left-spacer: 15%;
@@ -107,6 +108,10 @@ body {
     }
 }
 
+.text-link {
+    font-size: 1.6rem;
+}
+
 .icon-box {
     padding: 0 3rem 0 6.5rem;
     display: block;
@@ -173,7 +178,12 @@ body {
     }
 }
 
-
+a.anchor {
+    display: block;
+    position: relative;
+    top: -250px;
+    visibility: hidden;
+}
 
 
 
